--- a/atv1.html
+++ b/atv1.html
@@ -3,30 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Javascript 5 - Arrays - Atividade 1</title>
+  <title>Javascript 6 - Atividade 1</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p id="sequencia"></p>
+  <p></p>
   <script>
-    let arrayCompleto = [];
-    let arrayPares = [];
-    let arrayImpares = [];
+   //Faça um programa que peça o nome e as 3 de um aluno e armazene-as em dois arrays. Ao final, mostre o nome do aluno, as 3 notas registradas, média das notas e se ele foi aprovado ou reprovado (critério sendo média >= 6).
 
-    for (let i = 1; i < 11; i++) {
-      let num = prompt("Por favor digite um número: ")
-      arrayCompleto.push(num);
+   let notas = [];
+   let nome = prompt("Qual seu nome?");
+   let media = 0;
 
-      if(num % 2 === 0) {
-        arrayPares.push(num);
-      } else {
-        arrayImpares.push(num);
-      }
-    }
+   for (let i = 1; i <= 3; i++) {
+    notas.push(Number(prompt(`Por gentileza, digitar a sua ${i}° nota`)))
+   }
 
-    console.log(arrayCompleto)
-    console.log(arrayPares)
-    console.log(arrayImpares)
+   for(let nota of notas) {
+    media += nota
+   }
+
+   if(media >= 6) {
+    situacao = "Aprovado";
+   } else {
+    situacao = "Reprovado";
+   }
+
+   //Também daria pra usar o ternário: let situacao = media >= 6 ? "Aprovado" : "Reprovado"
+   // \n quebra linha, mas em tese a crase possibilita fazer manualmente, ou seja, quebrar com enter mesmo visualmente; toFixed ajeita para dízimas periódicas
+
+   alert(`Aluno: ${nome}. \n Notas: ${notas}. \n Média final: ${(media/notas.length).toFixed(3)}. \n Situação: ${situacao}`)
 
   </script>
 </body>
