--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Javascript 6 - Arrays (Revisão) e Funções</title>
+  <title>Javascript 7 - Funções (Revisão) e mais sobre</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <p></p>
   <script>
-   //Cheguei atrasada então ele já tava passando alguma espécie de atividade
-   //Peça para o usuário uma n quantidade de números, armazene-os em um array e mostre a média dos números
-
-   let numeros = [];
-   let quantidade = Number(prompt("Insira quantos números você quer armazenar."))
-   let media = 0;
-
-   for (let n = 1; n <= quantidade; n++) {
-    numeros.push(Number(prompt(`Digite o ${n}° número`)));
+   //Funções anônimas; uma das formas de uso é quando se associa uma função a uma variável
+   let soma = function(n1, n2) {
+    return n1 + n2
    }
 
-   for (let element of numeros) {
-    media += element
+   soma(8, 44)
+
+   //Não se faz dessa forma hoje em dia, mas pode ser que em sistemas legados você se depare com isso
+
+   //Função anônima arrow function; perceba que ela não usa a palavra 'function'
+   //Obs: quando se tem somente um parâmetro, pode-se tirar o parêntese, assim como caso o retorno seja uma 'linha' só, pode-se tirar tanto os {} quanto a palavra return,  tal que: let potenciacao = numero => numero ** 2
+   let potenciacao = (numero) => {
+      return numero ** 2
    }
 
-   alert(`Sua média é ${media/quantidade}`)
+   potenciacao(6)
+
+
 
   </script>
 </body>
