--- a/Javascript/AULA_14/index.html
+++ b/Javascript/AULA_14/index.html
@@ -31,7 +31,7 @@
     -->
     <main>
       <div>
-      <p>Se você clickar no botão abaixo, apareça uma foto aleatória de um cachorrinho!</p>
+      <p>Se você clickar no botão abaixo, aparece uma foto aleatória de um cachorrinho!</p>
       <button onclick="mostrarCachorro()">Me traga um cachorro</button>
       </div>
       <img id="imagemCachorro"></img>
