--- a/Javascript/AULA_14/index.html
+++ b/Javascript/AULA_14/index.html
@@ -28,6 +28,8 @@
 <body>
     <!-- Tem várias APIs públicas na internet pra fins de teste e outros caso queira usar.
       Exemplo da de imagens de cachorro: https://dog.ceo/dog-api/documentation/random
+
+      Também temos métodos de POST e DELETE, ela também mostrou uma API antiga que ela fez, não sei se colocou no dontpad (419-15-05)
     -->
     <main>
       <div>
