ajustes iniciais para criação da rota de busca por tipo (filtro)

--- a/Javascript/AULA_15/index.html
+++ b/Javascript/AULA_15/index.html
@@ -11,7 +11,10 @@
 
 </head>
 <body>
+    <header>Pokédex</header>
     <main>
+    <div>You can also select a type for filtering!</div>
+    <select></select>
         <section class="pokemons"></section>
     </main>
     
