mais ajustes para filtragem pokemon, falta fazer lógica do select e associar função à seleççao

--- a/Javascript/AULA_15/index.html
+++ b/Javascript/AULA_15/index.html
@@ -12,9 +12,26 @@
 </head>
 <body>
     <header>Pokédex</header>
+
     <main>
     <div>You can also select a type for filtering!</div>
-    <select></select>
+
+    <select id="pokemonsTypeSelect">
+      <option value="">Types</option>
+      <option value="water">Water</option>
+      <option value="grass">Grass</option>
+      <option value="poison">Poison</option>
+      <option value="flying">Flying</option>
+      <option value="fire">Fire</option>
+      <option value="fairy">Fairy</option>
+      <option value="psychic">Psychic</option>
+      <option value="bug">Bug</option>
+      <option value="normal">Normal</option>
+      <option value="electric">Eletric</option>
+      <option value="ground">Ground</option>
+      <option value="rock">Rock</option>
+    </select>
+
         <section class="pokemons"></section>
     </main>
     
