--- a/Javascript/AULA_17/index.html
+++ b/Javascript/AULA_17/index.html
@@ -4,27 +4,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Javascript 17 - Penúltima aula de Javascript</title>
-  <style>
-    * {
-        background-color: rgb(14, 123, 117);
-        color: rgb(255, 251, 240);
-        margin-left: 4px;
-    }
-
-  </style>
+  <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-    <!-- 
+    <!-- A gente vai usar as rotas/endpoints da Fake Store API que é pra criar um protótipo de website falso para comércio/e-commerce
+
+      Fontes 'famosas':
+      Roboto
+      Poppins
+      Open Sans
     -->
     <main>
       <div>
       <p></p>
       <button onclick=""></button>
       </div>
-    </main>
+    </main>      
+    <script src="./script.js"></script>
 </body>
 </html>
-    <script>
-    </script>
-</body>
-</html>
+
