mais estilização, ajustes index

--- a/Javascript/AULA_17/index.html
+++ b/Javascript/AULA_17/index.html
@@ -38,7 +38,15 @@
     </aside>
     <main>
       <h2 class="ourStuff">Our stuff</h2>
-      <section class="productsList"></section>
+      <section class="productsList">
+        <div class="product">
+          <img/>
+          <h4>Nome do produto</h4>
+          <div>
+            <p>R$2500,00</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <p>&copy; FakeStore, 2024. All copyrights reserved.</p>
