script primeira parte, ajustes estilização

--- a/Javascript/AULA_17/index.html
+++ b/Javascript/AULA_17/index.html
@@ -17,6 +17,7 @@
       Poppins
       Open Sans
 
+      Sim, Jewelry na API deles está escrito errado
     -->
     <header>
       <h1>FakeStore</h1>
@@ -40,7 +41,7 @@
       <h2 class="ourStuff">Our stuff</h2>
       <section class="productsList">
         <div class="product">
-          <img/>
+          <img class="shoppingCartForProduct" src="./shoppingCart.svg"/>
           <h4>Nome do produto</h4>
           <div>
             <p>R$2500,00</p>
