últimos ajustes antes de ir

--- a/Javascript/AULA_17/index.html
+++ b/Javascript/AULA_17/index.html
@@ -41,13 +41,13 @@
       <h2 class="ourStuff">Our stuff</h2>
       <section class="productsList">
         <div class="product">
-          <img width="25px" height="10px" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"/>
+          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"/>
           <h4>Nome do produto</h4>
           <div>
             <p>R$2500,00</p>
 
             <button>
-              <img class="shoppingCartForProduct" src="./shoppingCart.svg"/>
+              <img class="shoppingCartForProduct" width="25" height="25" src="./shoppingCart.svg"/>
             </button>
           </div>
         </div>
