--- a/Javascript/AULA_17/index.html
+++ b/Javascript/AULA_17/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Javascript 17 - Penúltima aula de Javascript</title>
+  <title>Javascript 17 e 18 - Penúltima e última aulas de Javascript</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -27,11 +27,15 @@
         <button>Products</button>
         <button>Login</button>
 
-        <div class="shoppingCart">
+        <div  class="shoppingCart">
         <img src="./shoppingCart.svg"/>
         <span class="shoppingCartQuantity">0</span>
+          <div class="finishCart">
+            <div class="cartItems">
+              <button>Finalizar compra</button>
+            </div>
+          </div>
         </div>
-      </div>
     </header>
     <aside>
       <h2 class="categoriesHeader">Categories</h2>
