--- a/Javascript/AULA_17/index.html
+++ b/Javascript/AULA_17/index.html
@@ -18,10 +18,19 @@
       Open Sans
 
       Sim, Jewelry na API deles está escrito errado
+
+
+      FALTOU
+      colocar informações no modal
+      fazer botão de finalizar compra aparecer
     -->
     <div class="modal">
       <div class="modalContent">
         <button class="closeModal" onclick="closeModal()">X</button>
+
+        <div class="checkoutItems"></div>
+
+        <button onclick="finishShopping()">Realizar Compra</button>
       </div>
     </div>
     <header>
@@ -38,10 +47,6 @@
           <div class="finishCart">
             <div class="cartItems">
               <button onclick="openModal()">Finalizar compra</button>
-
-              <div class="checkoutItems"></div>
-
-              <button onclick="finishShopping()">Realizar Compra</button>
             </div>
           </div>
         </div>
