desafio do jogo das 3 pistas reformulado

--- a/Javascript/AULA_06/atv1.html
+++ b/Javascript/AULA_06/atv1.html
@@ -32,7 +32,7 @@
    //Também daria pra usar o ternário: let situacao = media >= 6 ? "Aprovado" : "Reprovado"
    // \n quebra linha, mas em tese a crase possibilita fazer manualmente, ou seja, quebrar com enter mesmo visualmente; toFixed ajeita para dízimas periódicas
 
-   alert(`Aluno: ${nome}. \n Notas: ${notas}. \n Média final: ${(media/notas.length).toFixed(3)}. \n Situação: ${situacao}`)
+   alert(`Aluno: ${nome}. \n Notas: ${notas}. \n Média final: ${(media\notas.length).toFixed(3)}. \n Situação: ${situacao}`)
 
   </script>
 </body>
