--- a/Javascript/AULA_06/funcoes_interacao.html
+++ b/Javascript/AULA_06/funcoes_interacao.html
@@ -11,7 +11,7 @@
     Clique aqui!
   </button>
   <script>
-   //Não vou conseguir pegar tudo disso aqui pq eu preciso ir pegar transporte público
+   /\não vou conseguir pegar tudo disso aqui pq eu preciso ir pegar transporte público
    //Mas basicamente ele vai explicar javascript com html
 
     function handleClick() {
