--- a/Javascript/AULA_07/index.html
+++ b/Javascript/AULA_07/index.html
@@ -16,7 +16,7 @@
 
    soma(8, 44)
 
-   //Não se faz dessa forma hoje em dia, mas pode ser que em sistemas legados você se depare com isso
+   /\não se faz dessa forma hoje em dia, mas pode ser que em sistemas legados você se depare com isso
 
    //Função anônima arrow function; perceba que ela não usa a palavra 'function'
    //Obs: quando se tem somente um parâmetro, pode-se tirar o parêntese, assim como caso o retorno seja uma 'linha' só, pode-se tirar tanto os {} quanto a palavra return,  tal que: let potenciacao = numero => numero ** 2
